# check_mailcow

./: Cargo.toml  README.md  buildall.sh
src/: api_call.rs  check_postfix_rejections.rs  check_queue.rs  check_quota.rs  error.rs  lib.rs  main.rs
src/snapshots/: check_mailcow__check_queue__tests__check_queue_items_returns_expected_output_when_queue_items_is_not_empty.snap
