[package]
name = "check_mailcow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
native-tls = { version = "0.2", features = ["vendored"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
insta = "1.34"
